# imu-driver

./: .gitignore  flake.nix
imu_testing/: Cargo.toml
imu_testing/.cargo/: config.toml
imu_testing/src/: main.rs
lsm6dsv32/: Cargo.toml
lsm6dsv32/src/: config.rs  driver.rs  lib.rs
