[package]
name = "imu_testing"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "imu_testing"
path = "src/main.rs"

[dependencies]
embassy-stm32 = { version = "0.4.0", features = [ "defmt", "stm32g0b1re", "time-driver-any", "memory-x", "unstable-pac", "exti"]  }
embassy-sync = { version = "0.7.2",  features = ["defmt"] }
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-futures = { version = "0.1.2" }

defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
embedded-hal = "0.2.6"
embedded-hal-bus = { version = "0.2", features = ["async"] }
embedded-io = "0.6.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
portable-atomic = { version = "1.5", features = ["unsafe-assume-single-core"] }
static_cell = "2"
nb = "1.0.0"


embedded-io-async = { version = "0.6.1" }
bitflags = "2.10.0"

lsm6dsv32 = { version = "0.1.0", path = "../lsm6dsv32" }

[profile.release]
debug = 2
