[package]
name = "imu_testing"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "imu_testing"
path = "src/main.rs"

[dependencies]
embassy-stm32 = { version = "0.5.0", features = [ "defmt", "stm32h723vg", "time-driver-any", "memory-x", "unstable-pac", "exti"]  }
embassy-sync = { version = "0.7.2",  features = ["defmt"] }
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-futures = { version = "0.1.2" }

defmt = "1.0.1"
defmt-rtt = "1.1.0"

cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
critical-section = "1.2"
embedded-hal = "1.0.0"
embedded-hal-bus = { version = "0.3", features = ["async"] }
embedded-io = "0.7.1"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
heapless = { version = "0.9", default-features = false }
static_cell = "2"
nb = "1.1.0"


embedded-io-async = { version = "0.7.0" }
bitflags = "2.10.0"

lsm6dsv32 = { version = "0.1.0", path = "../lsm6dsv32", features = ["debug"] }

[profile.release]
debug = 2


