[package]
name = "lsm6dsv32"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
embassy-stm32 = { version = "0.4.0", features = [ "defmt", "exti", "stm32h723vg"]  }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime" ] }
embassy-sync = { version = "0.7.2",  features = ["defmt"] }

defmt = "1.0.1"

[profile.release]
debug = 2

[features]
default = []
debug = []