[package]
name = "lsm6dsv32"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
embassy-stm32 = { version = "0.5.0", features = [ "defmt", "exti"], optional = true  }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"], optional = true }
embassy-sync = { version = "0.7.2",  features = ["defmt"], optional = true }

defmt = "1.0.1"

[profile.release]
debug = 2

[features]
default = [ "driver" ]
driver = [ "dep:embassy-stm32", "dep:embassy-time", "dep:embassy-sync" ]
debug = []
simulation = []
