[package]
name = "lsm6dsv32"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
embassy-stm32 = { version = "0.6.0", features = [ "defmt", "exti"], optional = true  }
embassy-time = { version = "0.5.1", features = ["defmt", "defmt-timestamp-uptime"], optional = true }
embassy-sync = { version = "0.8.0",  features = ["defmt"], optional = true }

defmt = { version = "1.0.1", optional = true }

[profile.release]
debug = 2

[features]
default = [ "driver" ]
driver = [ "dep:embassy-stm32", "dep:embassy-time", "dep:embassy-sync" ]
debug = [ "dep:defmt" ]
simulation = []
